Bones disappearing with strange transforms #39750

Closed
opened 2014-04-15 23:18:24 +02:00 by Beorn Leonard · 12 comments

System Information
Linux Mint, GeForce G 103 M

Blender Version
Broken: cf01f2c
Worked: f93bc76 (official 2.70a)

One of the bones in a simple rig I'm working on has disappeared. Anything parented to the bone also disappears.

In the attached file, the bone is selected (bone1) but not visible. Moving the bone around makes it flicker into view. When it is visible, the roll switches to 60 degrees, when it is invisible it flips back to 0.
Create a cube and parent it to any bone in the armature. It disappears.armature_bug.blend

**System Information** Linux Mint, GeForce G 103 M **Blender Version** Broken: cf01f2c Worked: f93bc76 (official 2.70a) One of the bones in a simple rig I'm working on has disappeared. Anything parented to the bone also disappears. In the attached file, the bone is selected (bone1) but not visible. Moving the bone around makes it flicker into view. When it is visible, the roll switches to 60 degrees, when it is invisible it flips back to 0. Create a cube and parent it to any bone in the armature. It disappears.[armature_bug.blend](https://archive.blender.org/developer/F84967/armature_bug.blend)
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @BeornLeonard

Added subscriber: @BeornLeonard
Bastien Montagne was assigned by Joshua Leung 2014-04-16 04:24:22 +02:00
Member

Added subscriber: @tippisum

Added subscriber: @tippisum

Added subscriber: @ideasman42

Added subscriber: @ideasman42

Cant redo this bug, loaded trusted in 2.70a and d1b1d194dc

No bone flickering, parenting a cube works as well

Cant redo this bug, loaded trusted in 2.70a and d1b1d194dc No bone flickering, parenting a cube works as well

I can confirm the issue here… not yet investigated it, though.

I can confirm the issue here… not yet investigated it, though.

Tsk, someone did a report already with file armature_bug.blend, I was checking old file.

Can redo this issue, its with mont29's new code, enabling --debug-fpe leads direct to the cause.

Tsk, *someone* did a report already with file `armature_bug.blend`, I was checking old file. Can redo this issue, its with mont29's new code, enabling `--debug-fpe` leads direct to the cause.

This issue was referenced by blender/blender-addons-contrib@ee387c6add

This issue was referenced by blender/blender-addons-contrib@ee387c6addb2a6c92b48525b0ee5b3b734430002

This issue was referenced by ee387c6add

This issue was referenced by ee387c6addb2a6c92b48525b0ee5b3b734430002

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit ee387c6add.

Closed by commit ee387c6add.

@ideasman42 thanks a bunch for the --debug-fpe tip, was a gold one! Found and fixed another similar issue in same area too. :D

@ideasman42 thanks a bunch for the `--debug-fpe` tip, was a gold one! Found and fixed another similar issue in same area too. :D
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#39750
No description provided.