Fix T39750: Bones disappearing with strange transforms.

Fixed this issue and another similar one, and some minor optimizations.